fonction inscription done

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 		<div class=" text-center col-lg-4 ">
                         	<h5> Identifiant </h5>
                     	</div>
-                        <div class=" text-center col-lg-7">
+                        <div class=" text-center col-lg-7" id="email_ins_div">
                         	<input id="email_ins" type="email" class="form-control"  placeholder="Email" >
                             
                     	</div>
@@ -121,7 +121,7 @@
                 		<div class=" text-center col-lg-4 ">
                         	<h5> Nom et prenom </h5>
                     	</div>
-                        <div class=" text-center col-lg-7">
+                        <div class=" text-center col-lg-7" id="name_ins_div">
                         	<input id="name_ins" class="form-control"  placeholder="Nom et prenom">
                     	</div>
                     </div>
@@ -130,8 +130,8 @@
                 		<div class=" text-center col-lg-4 ">
                         	<h5> Mot de passe </h5>
                     	</div>
-                        <div class=" text-center col-lg-7">
-                        	<input id="name_ins" type="password" class="form-control" placeholder="Password" >
+                        <div class=" text-center col-lg-7" id="password1_ins_div">
+                        	<input id="password1_ins" type="password" class="form-control" placeholder="Password" >
                     	</div>
                     </div>
                      <br/>
@@ -139,7 +139,7 @@
                 		<div class=" text-center col-lg-4 ">
                         	<h5> Verifier </h5>
                     	</div>
-                        <div class=" text-center col-lg-7">
+                        <div class=" text-center col-lg-7" id="password2_ins_div">
                         	<input id="password2_ins" type="password" class="form-control"  placeholder="Password">
                             
                     	</div>
@@ -151,7 +151,7 @@
                     	</div>
                         <div class="text-left col-lg-7">
                         	<select id="type_ins" class="selectpicker show-menu-arrow" >
-                            	<option>Equiper</option>
+                            	<option >Equiper</option>
                                 <option>Chef d'equipe</option>
                             </select>
                     	</div>
