--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Bootstrap - Prebuilt Layout</title>
+<title>Kaggle-ESIGELEC</title>
 
 <!-- Bootstrap -->
 <link href="css/bootstrap.css" rel="stylesheet">
@@ -32,7 +32,7 @@
   <div class="row">
     <div class="col-sm-4 text-center col-lg-4 col-lg-offset-2">      
       <img  src="img/champion.jpg" alt= "logo" class="img-responsive">      
-      <button type="button"  class="btn btn-info btn-lg btn-block"  onclick="window.location.href='http://localhost/listequipe.php'">Liste d'equipe</button>
+      <button type="button"  class="btn btn-primary btn-lg btn-block"  onclick="window.location.href='http://localhost/listequipe.php'">Liste d'equipe</button>
       
     </div>
     <div class="text-center col-sm-4 col-lg-offset-1">
@@ -87,7 +87,7 @@
                     <br/>
                     <div class="row">
                     	<div class=" text-center">
-                   			 <button id="connecter" class="btn btn-info " >Connecter</button>
+                   			 <button id="connecter" class="btn btn-primary " >Connecter</button>
                     	</div>
                         
                     </div>
