--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             	<div class="container-fluid">
                 	<div class="row">
                    		  <div class=" text-center col-lg-4 ">
-                       		 <h5>Identifiang</h5>                          
+                       		 <h5>Identifiant</h5>                          
                     	</div>
                          <div class=" text-center col-lg-7" id="email_div">
                     	<input type="email" id="email_login"   class="form-control" placeholder="Email">
