--- a/fileview.html
+++ b/fileview.html
@@ -8,7 +8,7 @@
 
 
 	<!-- Include our stylesheet -->
-	<link href="assets/css/styles.css" rel="stylesheet"/>
+	<link href="css/styles.css" rel="stylesheet"/>
 
 </head>
 <body>
@@ -29,12 +29,9 @@
 		</div>
 
 	</div>
-
-	
-
 	<!-- Include our script files -->
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-	<script src="assets/js/script.js"></script>
+	<script src="js/script.js"></script>
 
 </body>
 </html>
