--- a/chef.html
+++ b/chef.html
@@ -9,7 +9,8 @@
 <!-- Bootstrap -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/fileinput.css" media="all" rel="stylesheet" type="text/css" />
-
+<link rel="stylesheet" href="css/bootstrap-responsive.css">
+<link rel="stylesheet" href="css/calendar.css">
 <script src="js/jquery-1.11.3.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/fileinput.js" type="text/javascript"></script>
@@ -72,35 +73,58 @@
     </div>
     <div class="col-md-6 ">
       <div class="tab-content"> 
-        <!--  panel compte rendu-->
+        <!--  panel reunion-->
         <div role="tabpanel" class="tab-pane active" id="reunions">
           <div class="panel panel-info">
             <div class="panel-heading">Reunions</div>
-            <div class="panel-body">
-              <div class = "container-fluid"> 
-               </div>
+            <div class="panel-body embed-responsive-item">
+              <div class="container-fluid">  
+                       
+                <div class="page-header">
+                  <div class="pull-right form-inline">
+                    <div class="btn-group">
+                      <button class="btn btn-primary" data-calendar-nav="prev"> Prev</button>
+                      <button class="btn" data-calendar-nav="today">Today</button>
+                      <button class="btn btn-primary" data-calendar-nav="next">Next</button>
+                    </div>
+                    <div class="btn-group">
+                      <button class="btn btn-warning" data-calendar-view="year">Year</button>
+                      <button class="btn btn-warning active" data-calendar-view="month">Month</button>
+                      <button class="btn btn-warning" data-calendar-view="week">Week</button>
+                      <button class="btn btn-warning" data-calendar-view="day">Day</button>
+                    </div>
+                  </div>                 
+                   <h3></h3>
+                   </div>
+                <div class="row">
+                  <div class="span9">
+                    <div id="calendar"></div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
         
-        <!-- END panel compte rendu --> 
-        <!--  panel reunion-->
+        <!-- END panel reunion --> 
+        <!--  panel compte rendu-->
         <div role="tabpanel" class="tab-pane" id="compterendu">
           <div class="panel panel-info">
             <div class="panel-heading">Compte rendu</div>
             <div class="panel-body">
-              <div class="container-fluid">
-              <!-- upload file-->
+              <div class="container-fluid"> 
+                <!-- upload file-->
                 <div class = "row">
-                  <input id="file-fr" type="file" multiple = "true"> 
+                  <input id="file-fr" type="file" multiple = "true">
                   <button type="button" class="btn btn-success" id= "regarder">Regarder</button>
                 </div>
-                <!-- END upload file--> 
+                <!-- END upload file-->
                 <div class="row"> </div>
               </div>
             </div>
           </div>
         </div>
+        <!-- END panel compte rendu--> 
         <!-- panel demande-->
         <div role="tabpanel" class="tab-pane" id="demande">
           <div class="panel panel-info">
@@ -140,6 +164,9 @@
   </div>
 </div>
 <hr>
-<script src = "js/chef.js"></script>
+<script src = "js/chef.js"></script> 
+<script type="text/javascript" src="js/underscore-min.js"></script> 
+<script type="text/javascript" src="js/calendar.js"></script> 
+<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
