--- a/equipier.html
+++ b/equipier.html
@@ -8,6 +8,8 @@
 
 <!-- Bootstrap -->
 <link href="css/bootstrap.css" rel="stylesheet">
+<link rel="stylesheet" href="css/bootstrap-responsive.css">
+<link rel="stylesheet" href="css/calendar.css">
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
@@ -30,6 +32,7 @@
             <li><a href="#"><span class = "glyphicon glyphicon-user"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Paramètre</a></li>
             <li class="divider"></li>
             <li><a href="../jointeam.html"><span class = "glyphicon glyphicon-copy"></span>&nbsp;&nbsp;&nbsp;S'inscrire à une équipe</a></li>
+             <li><a href="../php/exit.php"><span class = "glyphicon glyphicon-log-out"></span>&nbsp;&nbsp;&nbsp;Déconnecter</a></li>
           </ul>
         </li>
       </ul>
@@ -64,8 +67,32 @@
       <div role="tabpanel" class="tab-pane active" id="reunions">
         <div class="panel panel-info">
           <div class="panel-heading">Reunions</div>
-          <div class="panel-body">
-          </div>
+           <div class="panel-body embed-responsive-item">
+              <div class="container-fluid">  
+                       
+                <div class="page-header">
+                  <div class="pull-right form-inline">
+                    <div class="btn-group">
+                      <button class="btn btn-primary" data-calendar-nav="prev"> Prev</button>
+                      <button class="btn" data-calendar-nav="today">Today</button>
+                      <button class="btn btn-primary" data-calendar-nav="next">Next</button>
+                    </div>
+                    <div class="btn-group">
+                      <button class="btn btn-warning" data-calendar-view="year">Year</button>
+                      <button class="btn btn-warning active" data-calendar-view="month">Month</button>
+                      <button class="btn btn-warning" data-calendar-view="week">Week</button>
+                      <button class="btn btn-warning" data-calendar-view="day">Day</button>
+                    </div>
+                  </div>                 
+                   <h3></h3>
+                   </div>
+                <div class="row">
+                  <div class="span9">
+                    <div id="calendar"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
       <!--  panel compte rendu-->
@@ -77,6 +104,7 @@
           		<div class="container-fluid">
                 	<button type="button" class="btn btn-success" id= "regarder">Regarder</button>
                 </div>
+               
           </div>
           </div>
       </div>
@@ -107,5 +135,9 @@
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
 <script src="js/bootstrap.js"></script> 
 <script src = "js/equipier.js"></script>
+<script type="text/javascript" src="js/underscore-min.js"></script> 
+<script type="text/javascript" src="js/language/fr-FR-calendar.js"></script>
+<script type="text/javascript" src="js/calendar.js"></script> 
+<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
