--- a/fileview.html
+++ b/fileview.html
@@ -30,7 +30,7 @@
 
 	</div>
 	<!-- Include our script files -->
-	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script src="../js/jquery-1.11.3.js"></script>
 	<script src="js/script.js"></script>
 
 </body>
